[package]
name = "wiremocket"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/xd009642/wiremocket"
documentation = "https://docs.rs/wiremocket/"
description = "Websocket mocking to test Rust applications."
keywords = ["test", "websocket", "mocking", "mock", "black-box"]
categories = ["development-tools", "asynchronous"]

[features]
default = ["serde_json", "tokio-tungstenite"]
tokio-tungstenite = ["dep:tokio-tungstenite"]
serde_json = ["dep:serde_json"]

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3.31"
serde_json = { version = "1.0.133", optional = true }
tokio = { version = "1.42.0", features = ["sync", "net"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.26.0", optional = true }
tracing = "0.1.41"
tungstenite = "0.26.0"

[dev-dependencies]
bytes = "1.9.0"
fastrand = "2.3.0"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
